# pmscope-module-template

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  pmscope-module.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: config.py  main.py  runner.py
tests/: conftest.py  test_contract.py
wheels/: pmscope_sdk-0.1.0-py3-none-any.whl
